adjusted code to TestNG